add_subdirectory(yscenetrace)
add_subdirectory(yscenetrace_adp)
add_subdirectory(ysceneproc)
add_subdirectory(yimageproc)
add_subdirectory(yshapeproc)
add_subdirectory(yheightfieldproc)

if(YOCTO_OPENGL)
add_subdirectory(ysceneview)
add_subdirectory(ysceneitrace)
add_subdirectory(ysceneitraces)
add_subdirectory(ysceneitraces_adp)
add_subdirectory(yimageview)
add_subdirectory(yimageviews)
endif(YOCTO_OPENGL)
